src = files(
	'clang_tu.cc',
	'config.cc',
	'filesystem.cc',
	'fuzzy_match.cc',
	'include_complete.cc',
	'log.cc',
	'lsp.cc',
	'main.cc',
	'message_handler.cc',
	'messages/ccls_call.cc',
	'messages/ccls_info.cc',
	'messages/ccls_inheritance.cc',
	'messages/ccls_member.cc',
	'messages/ccls_navigate.cc',
	'messages/ccls_reload.cc',
	'messages/ccls_vars.cc',
	'messages/textDocument_code.cc',
	'messages/textDocument_completion.cc',
	'messages/textDocument_definition.cc',
	'messages/textDocument_did.cc',
	'messages/textDocument_document.cc',
	'messages/textDocument_foldingRange.cc',
	'messages/textDocument_formatting.cc',
	'messages/textDocument_hover.cc',
	'messages/textDocument_references.cc',
	'messages/textDocument_rename.cc',
	'messages/textDocument_signatureHelp.cc',
	'messages/workspace.cc',
	'messages/initialize.cc',
	'pipeline.cc',
	'platform_posix.cc',
	'platform_win.cc',
	'position.cc',
	'project.cc',
	'query.cc',
	'sema_manager.cc',
	'serializer.cc',
	'test.cc',
	'utils.cc',
	'working_files.cc',
	'indexer.cc'
)

ccls_exe = executable(meson.project_name(), src,
	dependencies: deps
)
